# mygui

./: .gitignore  Cargo.toml  README.md
examples/: minimal.rs
src/: application.rs  lib.rs  shell.rs  tree.rs
src/component/: hbox.rs  layout.rs  mod.rs  mouse_click.rs  position.rs  render.rs  size.rs  state.rs  text.rs  window.rs
src/component/layout/: mod.rs  text.rs  window.rs
src/event/: mouse.rs
src/system/: layout.rs  mod.rs  mouse.rs  render.rs  text_render.rs
src/system/state/: context.rs  mod.rs  state.rs
src/util/: border.rs  constraints.rs  mod.rs
src/widget/: button.rs  label.rs  mod.rs  window.rs
src/widget/layout/: center.rs  mod.rs
