[package]
name = "mygui"
version = "0.1.0"
authors = ["kivimango <balazsviktor23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.10.0"
specs = { version = "0.16.1", features = ["specs-derive"] }
tiny-skia = "0.6.0"
orbclient = "0.3.31"