[package]
name = "mygui"
version = "0.1.0"
authors = ["kivimango <balazsviktor23@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
font-kit = "0.10.0"
orbclient = "0.3.31"
rusttype = "0.9.2"
# WindowComponent and LayoutComponent aren't Sync, so we need to disable specs's parallelism feature
specs = { version = "0.17.0", default-features = false, features = ["specs-derive"] }
tiny-skia = "0.6.0"
indextree = "4.3.1"